--- a/figures/architectures/maxnet.tex
+++ b/figures/architectures/maxnet.tex
@@ -14,7 +14,9 @@
 \def\UnpoolColor{rgb:blue,2;green,1;black,0.3}
 \def\FcColor{rgb:blue,5;red,2.5;white,5}
 \def\FcReluColor{rgb:blue,5;red,5;white,4}
-\def\SoftmaxColor{rgb:magenta,5;black,7}   
+%\def\SoftmaxColor{rgb:magenta,5;black,9}
+\def\TanhColor{rgb:magenta,9;white,4}
+\def\SoftmaxColor{rgb:green,1}
 
 \newcommand{\copymidarrow}{\tikz \draw[-Stealth,line width=0.8mm,draw={rgb:blue,4;red,1;green,1;black,3}] (-0.3,0) -- ++(0.3,0);}
 
@@ -54,12 +56,12 @@
 {RightBandedBox={
 		name=Gconv0,
 		caption= ,
-		xlabel={{ 64 },},
+		xlabel={{ "100+4" },},
 		fill=\ConvTColor,
 		bandfill=\BatchNormColor,
-		height=4,
-		width={ 7 },
-		depth=4
+		height=2,
+		width={ 3 },
+		depth=2
 	}
 };
 \pic[shift={(0,0,0)}] at (Gconv0-east) 
@@ -67,10 +69,10 @@
 		name=Grelu2,
 		caption= ,
 		fill=\ReluColor,
-		height=4,
+		height=2,
 		width=1,
-		depth=4,
-		zlabel=4
+		depth=2,
+		zlabel=1
 	}
 };
 
@@ -80,12 +82,12 @@
 {RightBandedBox={
 		name=Gconv3,
 		caption= ,
-		xlabel={{ 32 },},
+		xlabel={{ 1024 },},
 		fill=\ConvTColor,
 		bandfill=\BatchNormColor,
-		height=7,
+		height=4,
 		width={ 6 },
-		depth=7
+		depth=4
 	}
 };
 \pic[shift={(0,0,0)}] at (Gconv3-east) 
@@ -93,10 +95,10 @@
 		name=Grelu5,
 		caption= ,
 		fill=\ReluColor,
-		height=7,
-		zlabel=8,
+		height=4,
+		zlabel=4,
 		width=1,
-		depth=7	
+		depth=4
 	}
 };
 
@@ -104,16 +106,16 @@
 
 % 6
 
-\pic[shift={ (1.2,0,0) }] at (Grelu5-east)
+\pic[shift={ (0.8,0,0) }] at (Grelu5-east)
 {RightBandedBox={
 		name=Gconv6,
 		caption= ,
-		xlabel={{ 16 },},
+		xlabel={{ 512 },},
 		fill=\ConvTColor,
 		bandfill=\BatchNormColor,
-		height=12,
+		height=7,
 		width={ 5 },
-		depth=12
+		depth=7
 	}
 };
 \pic[shift={(0,0,0)}] at (Gconv6-east) 
@@ -121,10 +123,10 @@
 		name=Grelu8,
 		caption= ,
 		fill=\ReluColor,
-		height=12,
-		zlabel=16,
+		height=7,
+		zlabel=8,
 		width=1,
-		depth=12
+		depth=7
 	}
 };
 
@@ -132,27 +134,27 @@
 
 % 9
 
-\pic[shift={ (1.5,0,0) }] at (Grelu8-east)
+\pic[shift={ (1.2,0,0) }] at (Grelu8-east)
 {RightBandedBox={
 		name=Gconv9,
 		caption= ,
-		xlabel={{ 8 }},
+		xlabel={{ 256 },},
 		fill=\ConvTColor,
 		bandfill=\BatchNormColor,
-		height=20,
+		height=12,
 		width={ 4 },
-		depth=20
+		depth=12
 	}
 };
 \pic[shift={(0,0,0)}] at (Gconv9-east) 
 {Box={
 		name=Grelu11,
 		caption= ,
-		zlabel=32,
+		zlabel=16,
 		fill=\ReluColor,
-		height=20,
+		height=12,
 		width=1,
-		depth=20
+		depth=12
 	}
 };
 
@@ -160,16 +162,16 @@
 
 % 12
 
-\pic[shift={ (2,0,0) }] at (Grelu11-east)
+\pic[shift={ (1.5,0,0) }] at (Grelu11-east)
 {RightBandedBox={
 		name=Gconv12,
 		caption= ,
-		xlabel={{ 4 }},
+		xlabel={{ 128 },},
 		fill=\ConvTColor,
 		bandfill=\BatchNormColor,
-		height=30,
+		height=20,
 		width={ 3 },
-		depth=30
+		depth=20
 	}
 };
 \pic[shift={(0,0,0)}] at (Gconv12-east) 
@@ -177,10 +179,10 @@
 		name=Grelu14,
 		caption= ,
 		fill=\ReluColor,
-		height=30,
-		zlabel=64,
+		height=20,
+		zlabel=32,
 		width=1,
-		depth=30
+		depth=20
 	}
 };
 
@@ -188,12 +190,28 @@
 
 % 15
 
-\pic[shift={ (3,0,0) }] at (Grelu14-east)
+\pic[shift={ (2,0,0) }] at (Grelu14-east)
 {Box={
 		name=Gconv15,
 		caption= ,
-		xlabel={{ 2 }},
-		zlabel=128,
+		xlabel={{ 64 },},
+		zlabel=64,
+		fill=\ConvTColor,
+		height=30,
+		width={ 2 },
+		depth=30
+	}
+};
+
+\draw [connection]  (Grelu14-east)    -- node {\midarrow} (Gconv15-west);
+
+
+\pic[shift={ (3,0,0) }] at (Gconv15-east)
+{Box={
+		name=Gtanh16,
+		caption= ,
+		xlabel={{ 3 },},
+		zlabel=,
 		fill=\ConvTColor,
 		height=50,
 		width={ 2 },
@@ -201,9 +219,21 @@
 	}
 };
 
-\draw [connection]  (Grelu14-east)    -- node {\midarrow} (Gconv15-west);
+\draw [connection]  (Gconv15-east)    -- node {\midarrow} (Gtanh16-west);
 
-% TODO add tanh
+\pic[shift={ (0,0,0) }] at (Gtanh16-east)
+{Box={
+		name=Gfinal,
+		caption= ,
+		xlabel={{  },},
+		zlabel=128,
+		fill=\TanhColor,
+		height=50,
+		width={ 1 },
+		depth=50
+	}
+};
+
 
 
 %
@@ -236,7 +266,7 @@
     {Box={
         name=Dconv0,
         caption= ,
-        xlabel={{ 2 }},
+        xlabel={{ "3+4" },},
         fill=\ConvColor,
         height=50,
         width={ 2 },
@@ -261,7 +291,7 @@
 {RightBandedBox={
 		name=Dconv2,
 		caption= ,
-		xlabel={{ 4 }},
+		xlabel={{ 64 },},
 		fill=\ConvColor,
 		bandfill=\BatchNormColor,
 		height=30,
@@ -290,7 +320,7 @@
 {RightBandedBox={
 		name=Dconv5,
 		caption= ,
-		xlabel={{ 8 }},
+		xlabel={{ 128 },},
 		fill=\ConvColor,
 		bandfill=\BatchNormColor,
 		height=20,
@@ -318,7 +348,7 @@
 {RightBandedBox={
 		name=Dconv8,
 		caption= ,
-		xlabel={{ 16 },},
+		xlabel={{ 256 },},
 		fill=\ConvColor,
 		bandfill=\BatchNormColor,
 		height=12,
@@ -347,7 +377,7 @@
 {RightBandedBox={
 		name=Dconv11,
 		caption= ,
-		xlabel={{ 32 },},
+		xlabel={{ 512 },},
 		fill=\ConvColor,
 		bandfill=\BatchNormColor,
 		height=7,
@@ -371,11 +401,11 @@
 
 % 14
 
-\pic[shift={(0.7,0,0)}] at (Dconv11-east) 
+\pic[shift={(0.8,0,0)}] at (Dconv11-east) 
     {Box={
         name=Dconv14,
         caption= ,
-        xlabel={{64, }},
+        xlabel={{ 1024 },},
         zlabel=4,
         fill=\ConvColor,
         height=4,
@@ -385,6 +415,37 @@
     };
 
 \draw [connection]  (Dconv11-east)    -- node {\midarrow} (Dconv14-west);
+
+\pic[shift={(0.7,0,0)}] at (Dconv14-east) 
+{Box={
+		name=Dsigmoid15,
+		caption= ,
+		xlabel={{ 1 },},
+		zlabel=,
+		fill=\ConvColor,
+		height=2,
+		width=2,
+		depth=2
+	}
+};
+
+\draw [connection]  (Dconv14-east)    -- node {\midarrow} (Dsigmoid15-west);
+
+
+\pic[shift={(0,0,0)}] at (Dsigmoid15-east) 
+{Box={
+		name=Dfinal,
+		caption= ,
+		xlabel={{  },},
+		zlabel=1,
+		fill=\SoftmaxColor,
+		height=2,
+		width=1,
+		depth=2
+	}
+};
+
+
 
 % TODO add sigmoid
 
