--- a/figures/architectures/maxnet.tex
+++ b/figures/architectures/maxnet.tex
@@ -92,9 +92,9 @@
 };
 \pic[shift={(0,-1,0)}] at (labelConvBatch-south) 
 {Box={
-		name=labelSoftmax,
+		name=labelSigmoid,
 		caption= ,
-		xlabel={{ "Softmax" },},
+		xlabel={{ "Sigmoid" },},
 		zlabel=,
 		fill=\SoftmaxColor,
 		height=2,
