--- a/paper.tex
+++ b/paper.tex
@@ -192,7 +192,7 @@
 %% The abstract is a short summary of the work to be presented in the
 %% article.
 \begin{abstract}
-Generative Adversarial Networks (GANs) are a well-known technique that is trained on samples (e.g.~pictures of fruits) and which after training is able to generate realistic new samples. Conditional GANs (CGANs) additionally provide label information for subclasses (e.g.~apple, orange, pear) which enables the GAN to learn more easily and increase the quality of its output samples. We use GANs to learn architectural features of major cities and to generate images of buildings which do not exist. We show that currently available GAN and CGAN architectures are unsuited for this task and propose a custom architecture. We show that our architecture has superior performance for this task and verify its capabilities with extensive experiments. 
+Generative Adversarial Networks (GANs) are a well-known technique that is trained on samples (e.g.~pictures of fruits) and which after training is able to generate realistic new samples. Conditional GANs (CGANs) additionally provide label information for subclasses (e.g.~apple, orange, pear) which enables the GAN to learn more easily and increase the quality of its output samples. We use GANs to learn architectural features of major cities and to generate images of buildings which do not exist. We show that currently available GAN and CGAN architectures are unsuited for this task and propose a custom architecture and demonstrate that our architecture has superior performance for this task and verify its capabilities with extensive experiments. 
 \end{abstract}
 
 %%
@@ -360,7 +360,13 @@ The discriminator of the GAN proceeds as in the regular GAN and uses a convoluti
 
 \section{Conditional GAN with custom architecture} 
 
-After achieving suboptimal results with this CGAN architecture we tried a different approach and modified the discriminator: instead of adding the one-hot-encoded vector with the city information after the convolution, we decided to add it as an input to each pixel in the beginning of the convolution. Thus, additional to the RGB values, each pixel also has the one-hot-encoded information of the city. For example, with four cities, each pixel has 7 color channels: 3 for the colors and 4 for the one-hot-encoded cities. 
+After achieving suboptimal results with this CGAN architecture we tried a different approach and modified the discriminator: instead of adding the one-hot-encoded vector with the city information after the convolution, we decided to add it as an input to each pixel in the beginning of the convolution. Thus, additional to the RGB values, each pixel also has the one-hot-encoded information of the city. For example, with four cities, each pixel has 7 color channels: 3 for the colors and 4 for the one-hot-encoded cities (\autoref{fig:maxnet}). 
+
+\begin{figure}
+\includegraphics[width=\columnwidth]{figures/architectures/maxnet.pdf}
+\caption{The architecture of our neural network is inspired by \cite{pytorch_deep_2019}. The difference in our custom architecture is that labels are fed into the generator (top) as well as into the discriminator (bottom) alongside the data.}  % TODO
+\label{fig:maxnet}
+\end{figure}
 
 While this approach sounds wasteful because of the duplicate information that is fed into the convolutional layer, it achieved significantly better results. One possible explanation for this improvement is that by adding the city information to the input picture, we help the kernels of the convolution to work differently for each city. 
 
@@ -368,12 +374,6 @@ While this approach sounds wasteful because of the duplicate information that is
 \includegraphics[width=\columnwidth]{figures/good_hack_final.png}
 \caption{Our custom CGAN architecture. Each column represents one random input to the generator. The rows represent: the average of all cities, Amsterdam, Manhattan, Paris and Vienna.}
 \label{fig:hack}
-\end{figure}
-
-\begin{figure}
-\includegraphics[width=\columnwidth]{figures/architectures/maxnet.pdf}
-\caption{The architecture of our neural network is inspired by \cite{pytorch_deep_2019}. The difference in our custom architecture is that labels are fed into the generator as well as into the discriminator alongside the data.}  % TODO
-\label{fig:maxnet}
 \end{figure}
 
 \autoref{fig:hack} shows that the results of our custom CGAN are significantly better than with our previous attempt and are also better than the normal GAN. 
@@ -494,6 +494,10 @@ Investigating its effects on other tasks is a feasible future research path.
 
 We have made all our code and used data available, so that the community can both reproduce and improve on our results.
 
+\section*{Acknowledgement}
+% We thank NVIDIA Corporation for donating a Titan Xp.
+% The Titan Xp we used was donated by NVIDIA.
+The Titan Xp used for this research was donated by the NVIDIA Corporation.
 
 %\bibliographystyle{plainnat}
 \bibliographystyle{ACM-Reference-Format}
