Add x label to final layer again

--- a/figures/architectures/maxnet.tex
+++ b/figures/architectures/maxnet.tex
@@ -332,7 +332,7 @@
 {Box={
 		name=Gfinal,
 		caption= ,
-		xlabel={{  },},
+		xlabel={{ 3 },},
 		zlabel=128,
 		fill=\TanhColor,
 		height=50,
@@ -558,7 +558,7 @@
 {Box={
 		name=Dfinal,
 		caption= ,
-		xlabel={{  },},
+		xlabel={{ 1 },},
 		zlabel=1,
 		fill=\SigmoidColor,
 		height=2,
