--- a/paper.tex
+++ b/paper.tex
@@ -310,9 +310,9 @@ To achieve this, we followed these steps:
 
 \end{itemize}
 \begin{figure}[h]
-\includegraphics[width=0.49\columnwidth{}]{"figures/examples/1 Place de Mexico, 75016".jpg}%
+\includegraphics[width=0.49\columnwidth{}]{figures/examples/1_Place_de_Mexico,_75016.jpg}%
 \hspace{0.015\columnwidth}%
-\includegraphics[width=0.49\columnwidth{}]{"figures/examples/1 Port de la Bourdonnais, 75007".jpg}
+\includegraphics[width=0.49\columnwidth{}]{figures/examples/1_Port_de_la_Bourdonnais,_75007.jpg}
 \caption{Two examples of pictures that we did not include in our dataset: on the left image there are gaps in the facades, the right one is anomalous (not a facade).}
 \label{fig:example_invalid}
 \end{figure}
@@ -363,7 +363,7 @@ The discriminator of the GAN proceeds as in the regular GAN and uses a convoluti
 After achieving suboptimal results with this CGAN architecture we tried a different approach and modified the discriminator: instead of adding the one-hot-encoded vector with the city information after the convolution, we decided to add it as an input to each pixel in the beginning of the convolution. Thus, additional to the RGB values, each pixel also has the one-hot-encoded information of the city. For example, with four cities, each pixel has 7 color channels: 3 for the colors and 4 for the one-hot-encoded cities (\autoref{fig:maxnet}). 
 
 \begin{figure}
-\includegraphics[width=\columnwidth]{figures/architectures/maxnet.pdf}
+\includegraphics[width=\columnwidth]{figures/architectures/maxnet_final.pdf}
 \caption{The architecture of our neural network is inspired by \cite{pytorch_deep_2019}. The difference in our custom architecture is that labels are fed into the generator (top) as well as into the discriminator (bottom) alongside the data.}  % TODO
 \label{fig:maxnet}
 \end{figure}
