--- a/paper.tex
+++ b/paper.tex
@@ -408,7 +408,7 @@ Thus we also tried training the CGAN with only these three cities, hoping this w
 
 \begin{figure}[h]
 \includegraphics[width=\columnwidth]{figures/good_hack_stanford_dataset.jpg}
-\caption{Our custom CGAN trained on the Stanford dataset. Each column represents one random input to the generator. The rows represent: the average of all cities, Amsterdam, Manhattan, Paris and Vienna.}
+\caption{Our custom CGAN trained on the Stanford dataset. Each column represents one random input to the generator. The rows represent: the average of all cities, Amsterdam, Washington D.C., Florence, Las Vegas and Manhattan.}
 \label{fig:stanford_net}
 \end{figure}
 
